# SFT

./: .gitignore  CMakeLists.txt
src/: main.cxx
src/core/: core.hxx  defines.hxx  pch.hxx
src/core/vector/: vector.hxx
